# eatwellHouse/backend/public/swagger.json
@@ -6,7 +6,50 @@
 		"parameters": {},
 		"requestBodies": {},
 		"responses": {},
-		"schemas": {},
+		"schemas": {
+			"_36_Enums.MediaType": {
+				"type": "string",
+				"enum": [
+					"CATEGORY_IMAGE",
+					"FOOD_IMAGE"
+				]
+			},
+			"CreateFoodDTO": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					},
+					"quantity": {
+						"type": "number",
+						"format": "double"
+					},
+					"image": {
+						"type": "number",
+						"format": "double"
+					},
+					"spicyness": {
+						"type": "boolean"
+					},
+					"category": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"name",
+					"price",
+					"quantity",
+					"image",
+					"category"
+				],
+				"type": "object",
+				"additionalProperties": false
+			}
+		},
 		"securitySchemes": {}
 	},
 	"info": {
@@ -18,6 +61,187 @@
 		"contact": {}
 	},
 	"paths": {
+		"/media": {
+			"post": {
+				"operationId": "UploadMedia",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"properties": {
+												"categoryId": {
+													"type": "number",
+													"format": "double"
+												},
+												"foodId": {
+													"type": "number",
+													"format": "double"
+												},
+												"updatedAt": {
+													"type": "string",
+													"format": "date-time"
+												},
+												"createdAt": {
+													"type": "string",
+													"format": "date-time"
+												},
+												"mediaType": {
+													"$ref": "#/components/schemas/_36_Enums.MediaType"
+												},
+												"name": {
+													"type": "string"
+												},
+												"id": {
+													"type": "number",
+													"format": "double"
+												}
+											},
+											"required": [
+												"categoryId",
+												"foodId",
+												"updatedAt",
+												"createdAt",
+												"mediaType",
+												"name",
+												"id"
+											],
+											"type": "object"
+										},
+										{
+											"type": "string",
+											"enum": [
+												"Invalid media type"
+											]
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"file": {
+										"type": "string",
+										"format": "binary"
+									},
+									"type": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"file",
+									"type"
+								]
+							}
+						}
+					}
+				}
+			}
+		},
+		"/food": {
+			"post": {
+				"operationId": "CreateFood",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {
+											"properties": {
+												"isAvailable": {
+													"type": "boolean"
+												},
+												"quantity": {
+													"type": "number",
+													"format": "double"
+												},
+												"price": {
+													"type": "number",
+													"format": "double"
+												},
+												"hasSpicyness": {
+													"type": "boolean"
+												},
+												"categoryId": {
+													"type": "number",
+													"format": "double"
+												},
+												"updatedAt": {
+													"type": "string",
+													"format": "date-time"
+												},
+												"createdAt": {
+													"type": "string",
+													"format": "date-time"
+												},
+												"name": {
+													"type": "string"
+												},
+												"id": {
+													"type": "number",
+													"format": "double"
+												}
+											},
+											"required": [
+												"isAvailable",
+												"quantity",
+												"price",
+												"hasSpicyness",
+												"categoryId",
+												"updatedAt",
+												"createdAt",
+												"name",
+												"id"
+											],
+											"type": "object"
+										},
+										"message": {
+											"type": "string"
+										},
+										"status": {
+											"type": "number",
+											"format": "double"
+										}
+									},
+									"required": [
+										"data",
+										"message",
+										"status"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateFoodDTO"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/category": {
 			"get": {
 				"operationId": "GetCategory",
@@ -26,7 +250,82 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"items": {
+										"allOf": [
+											{
+												"properties": {
+													"thumbnail": {
+														"properties": {
+															"categoryId": {
+																"type": "number",
+																"format": "double"
+															},
+															"foodId": {
+																"type": "number",
+																"format": "double"
+															},
+															"updatedAt": {
+																"type": "string",
+																"format": "date-time"
+															},
+															"createdAt": {
+																"type": "string",
+																"format": "date-time"
+															},
+															"mediaType": {
+																"$ref": "#/components/schemas/_36_Enums.MediaType"
+															},
+															"name": {
+																"type": "string"
+															},
+															"id": {
+																"type": "number",
+																"format": "double"
+															}
+														},
+														"required": [
+															"categoryId",
+															"foodId",
+															"updatedAt",
+															"createdAt",
+															"mediaType",
+															"name",
+															"id"
+														],
+														"type": "object"
+													}
+												},
+												"required": [
+													"thumbnail"
+												],
+												"type": "object"
+											},
+											{
+												"properties": {
+													"createdAt": {
+														"type": "string",
+														"format": "date-time"
+													},
+													"name": {
+														"type": "string"
+													},
+													"id": {
+														"type": "number",
+														"format": "double"
+													}
+												},
+												"required": [
+													"createdAt",
+													"name",
+													"id"
+												],
+												"type": "object"
+											}
+										]
+									},
+									"type": "array"
+								}
 							}
 						}
 					}
@@ -41,7 +340,27 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"createdAt": {
+											"type": "string",
+											"format": "date-time"
+										},
+										"name": {
+											"type": "string"
+										},
+										"id": {
+											"type": "number",
+											"format": "double"
+										}
+									},
+									"required": [
+										"createdAt",
+										"name",
+										"id"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
