# eatwellHouse/backend/src/controllers/food/Food.controller.ts
@@ -1,12 +1,20 @@
-import { Controller, Get, Post, Route, FormField, UploadedFile } from "tsoa";
-import fs from "fs";
-import CategoryService from "../../services/category/Category.service";
+import { Body, Controller, Post, Route, Middlewares } from "tsoa";
 import FoodService from "../../services/food/Food.service";
+import { RequestValidator } from "../../middlewares/requestValidator.middleware";
+import { CreateFoodDTO } from "../../dto/Food.dto";
 
 @Route("food")
 export class FoodController extends Controller {
   @Post("/")
-  async createFood() {
-    FoodService.add();
+  @Middlewares([RequestValidator.validate(CreateFoodDTO)])
+  async createFood(@Body() body: CreateFoodDTO) {
+    console.log("body", body);
+    const data = await FoodService.add(body);
+
+    return {
+      status: 204,
+      message: "Food created successfully",
+      data,
+    }
   }
 }
